--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,32 @@
 /*  your css code here. If applicable */
+
+
+#main{
+	Background-color: #f5f5f5;
+	padding: 30px;
+}
+
+.container{
+	padding: 0px;
+	color: black;
+	font-size: 25px;
+	font-weight: 600;
+	margin: 10px;
+}
+
+.testimonial-1, .testimonial-2{
+	background-color: white;
+	margin-bottom: 10px;
+	padding: 1px;
+	padding-left: 10px;
+	font-size: 12px;
+}
+
+.author{
+	text-align: right;
+	font-style: italic;
+}
+
+
+
+
